--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "mongoose": "^5.13.20",
     "redis": "^2.8.0",
     "sha1": "^1.1.1",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
@@ -38,7 +40,7 @@
     "@babel/register": "^7.8.0",
     "@sendgrid/mail": "^6.4.0",
     "axios": "^0.19.1",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.3.0",
     "bcryptjs": "^2.4.3",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
@@ -62,9 +64,8 @@
     "request": "^2.88.0",
     "sanitize-html": "^1.20.1",
     "sinon": "^7.5.0",
-    "socket.io": "^2.3.0",
     "validator": "^12.2.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack": "^4.47.0",
+    "webpack-cli": "^3.3.12"
   }
 }
