--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MONGO_USER=precious
 MONGO_PASS=BVrusc3d0Bkud0Ub
 MONGO_URL=mongodb+srv://precious:BVrusc3d0Bkud0Ub@cluster0.vb6vshg.mongodb.net/?retryWrites=true&w=majority
 
+PORT=5000
+
