Package.json update

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "bull": "^3.16.0",
     "chai-http": "^4.3.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
@@ -25,7 +24,8 @@
     "image-thumbnail": "^1.0.10",
     "mime-types": "^2.1.27",
     "mongodb": "^3.5.9",
-    "mongoose": "^5.13.20",
+    "mongoose": "^8.4.0",
+    "node": "^22.2.0",
     "redis": "^2.8.0",
     "sha1": "^1.1.1",
     "socket.io": "^4.7.2",
@@ -57,12 +57,10 @@
     "eslint-plugin-jest": "^22.17.0",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
-    "marked": "^0.8.0",
     "md5": "^2.2.1",
     "mocha": "^6.2.2",
     "nodemon": "^2.0.2",
     "request": "^2.88.0",
-    "sanitize-html": "^1.20.1",
     "sinon": "^7.5.0",
     "validator": "^12.2.0",
     "webpack": "^4.47.0",
