--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "gravatar": "^1.8.2",
     "image-thumbnail": "^1.0.10",
+    "kill-port": "^2.0.1",
     "mime-types": "^2.1.27",
     "mongodb": "^3.5.9",
     "mongoose": "^8.4.0",
