--- a/package.json
+++ b/package.json
@@ -1,75 +1,44 @@
 {
-    "name": "livre_chat",
+    "name": "livchat",
     "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
+    "description": "Chat",
+    "main": "server.js",
     "type": "module",
+    "directories": {
+        "test": "tests"
+    },
     "scripts": {
-        "lint": "./node_modules/.bin/eslint",
-        "check-lint": "lint [0-9]*.js",
-        "start": "npm run watch",
-        "watch": "npm-run-all --parallel watch:server watch:build",
-        "watch:build": "webpack --config webpack.config.js -w",
-        "watch:server": "nodemon \"server.js\" --watch \"./public\"",
-        "start-server": "nodemon --exec babel-node --presets @babel/preset-env ./server.js",
-        "start-worker": "nodemon --exec babel-node --presets @babel/preset-env ./worker.js",
-        "dev": "nodemon --exec babel-node --presets @babel/preset-env",
-        "test": "./node_modules/.bin/mocha --require @babel/register --exit"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
     },
-    "author": "",
+    "author": "Precious I",
     "license": "ISC",
-    "dependencies": {
-        "bcrypt": "^5.1.1",
-        "chai-http": "^4.3.0",
-        "cookie-parser": "^1.4.6",
-        "cookie-session": "^2.0.0",
-        "express": "^4.17.1",
-        "gravatar": "^1.8.2",
-        "image-thumbnail": "^1.0.10",
-        "kill-port": "^2.0.1",
-        "mime-types": "^2.1.27",
-        "mongodb": "^3.5.9",
-        "mongoose": "^8.4.0",
-        "node": "^22.2.0",
-        "redis": "^2.8.0",
-        "sha1": "^1.1.1",
-        "socket.io": "^4.7.2",
-        "socket.io-client": "^4.7.2",
-        "uuid": "^8.2.0"
-    },
     "devDependencies": {
-        "@babel/cli": "^7.8.0",
-        "@babel/core": "^7.8.0",
-        "@babel/node": "^7.8.0",
-        "@babel/preset-env": "^7.8.2",
-        "@babel/register": "^7.8.0",
-        "@sendgrid/mail": "^6.4.0",
-        "axios": "^0.19.1",
-        "babel-loader": "^8.3.0",
-        "bcryptjs": "^2.4.3",
-        "chai": "^4.2.0",
-        "chai-http": "^4.3.0",
-        "connect-flash": "^0.1.1",
-        "connect-mongo": "^2.0.0",
-        "cors": "^2.8.5",
-        "csurf": "^1.10.0",
-        "dompurify": "^2.0.7",
-        "dotenv": "^8.2.0",
-        "ejs": "^3.1.9",
-        "eslint": "^6.4.0",
-        "eslint-config-airbnb-base": "^14.0.0",
-        "eslint-plugin-import": "^2.18.2",
-        "eslint-plugin-jest": "^22.17.0",
-        "express-session": "^1.17.3",
-        "jsonwebtoken": "^8.5.1",
-        "md5": "^2.2.1",
-        "mocha": "^6.2.2",
-        "nodemon": "^2.0.2",
+        "@babel/cli": "^7.24.8",
+        "@babel/core": "^7.24.9",
+        "@babel/node": "^7.24.8",
+        "@babel/preset-env": "^7.24.8",
+        "@babel/register": "^7.24.6",
+        "babel-loader": "^9.1.3",
+        "dotenv": "^16.4.5",
+        "eslint": "^9.7.0",
+        "nodemon": "^3.1.4",
         "npm-run-all": "^4.1.5",
-        "request": "^2.88.0",
-        "sinon": "^7.5.0",
-        "validator": "^12.2.0",
-        "webpack": "^5.92.1",
+        "webpack": "^5.93.0",
         "webpack-cli": "^5.1.4"
+    },
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "connect-flash": "^0.1.1",
+        "cookie-parser": "^1.4.6",
+        "cookie-session": "^2.1.0",
+        "cors": "^2.8.5",
+        "ejs": "^3.1.10",
+        "express": "^4.19.2",
+        "gravatar": "^1.8.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.5.1",
+        "socket.io": "^4.7.5",
+        "validator": "^13.12.0"
     }
 }
