--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js"
+        "start": "npm run watch",
+        "watch": "npm-run-all --parallel watch:server watch:build",
+        "watch:build": "webpack --config webpack.config.js -w",
+        "watch:server": "nodemon \"server.js\" --watch \"./public\"",
+        "dev": "node server.js"
     },
     "author": "Precious I",
     "license": "ISC",
@@ -39,6 +43,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.5.1",
         "socket.io": "^4.7.5",
+        "socket.io-client": "^4.7.5",
         "validator": "^13.12.0"
     }
 }
